--- a/src/components/Owner/profile.scss
+++ b/src/components/Owner/profile.scss
@@ -1,3 +1,24 @@
-img {
-    border-radius: 50%;
+.profile-content {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    width: 100%;
+}
+
+.products {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    width: 45%;
+}
+.user-info {
+    img {
+        border-radius: 50%;
+    }
+
+    p {
+        margin: 0;
+        font-size: 12px;
+        width: 145px;
+    }
 }
