--- a/src/components/Owner/profile.scss
+++ b/src/components/Owner/profile.scss
@@ -3,6 +3,7 @@
     flex-direction: row;
     justify-content: space-around;
     width: 100%;
+    //background-color: white;
 }
 
 .products {
@@ -20,5 +21,15 @@
         margin: 0;
         font-size: 12px;
         width: 145px;
+        color: black;
     }
+}
+
+
+.checked {
+    color: #ccb3ff;
+  }
+
+.fa {
+    font-size: 16px !important;
 }
