created registration page

--- a/src/components/Owner/profile.scss
+++ b/src/components/Owner/profile.scss
@@ -28,8 +28,16 @@
 
 .checked {
     color: #ccb3ff;
+    &:hover {
+        color: black !important;
+    }
   }
 
 .fa {
     font-size: 16px !important;
+    cursor: pointer;
+    &:hover {
+        color: #ccb3ff; 
+    }
+    
 }
