--- a/src/App.scss
+++ b/src/App.scss
@@ -1,1 +1,37 @@
+//PADDINGS
 
+.padding-l-40 {
+  padding-left: 40px;
+}
+
+//MARGINS
+
+.margin-r-30 {
+  margin-right: 30px;
+}
+
+.margin-r-34 {
+  margin-right: 34px;
+}
+
+
+
+//BUTTONS
+
+.button__dark {
+  border-radius: 4px;
+  font-weight: 700;
+  color: rgba(255,255,255,0.82);
+  background-color: #262525;
+
+  &:hover {
+    color: #262525;
+    background: rgba(255,255,255,0.82);
+  }
+}
+
+.button__sm {
+  font-size: 1.5rem;
+  padding-bottom: 5px;
+  padding-top: 3px;
+}
