Started stylin register page

--- a/src/index.scss
+++ b/src/index.scss
@@ -47,3 +47,4 @@ $purple-light: $malibu-light;
 //SASS FILES OF COMPONENTS
 @import './components/NavBar/navbar';
 @import './components/Footer/footer';
+@import './components/Register/register';
