--- a/src/components/Footer/_footer.scss
+++ b/src/components/Footer/_footer.scss
@@ -1,10 +1,10 @@
 
 .footer {
     background: $medium-gray;
-
+    
     &-content {
         max-width: 1024px;
-        width: 80%;
+        width: 95%;
         margin: 0 auto;
         color: white;
         display: flex;
@@ -16,13 +16,22 @@
 
         &__left {
 
-            width: 40%;
+            width: 30%;
             display: flex;
             color: $malibu-light;
             font-size: 1.5rem;
             letter-spacing: -0.15px;
             line-height: 15px;
+            display: flex;
+            justify-content: space-between;
+            
 
+        }
+
+        & button {
+            background-color: lighten(#000, 15%);
+            border-radius: 5px;
+            font-weight: 700;
         }
 
         &__right {
@@ -32,15 +41,21 @@
             letter-spacing: -0.15px;
             line-height: 15px;
         }
+
+        &__three {
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+        }
     }
 
     &-link {
         color: inherit;
-        font-size: inherit;
+        font-size: .7rem;
         text-decoration: none;
         display: block;
-        padding-top: 4px;
-        padding-bottom: 4px;
+        text-align: left;
+        margin: 5px 0px;
 
         &:hover {
             color: $malibu;
@@ -50,7 +65,7 @@
 
     &-heading {
         color: white;
-        font-size: 1.6rem;
+        font-size: 1rem;
         font-weight: 700;
     }
 
@@ -61,7 +76,7 @@
 
     &-icon {
         position: absolute;
-        top: 8px;
+        top: 6px;
         left: 5px; 
         color: rgba(113,113,113,0.82);
         font-size: 1.5rem;
@@ -77,13 +92,16 @@
 
         &::placeholder {
             color: $light-gray;
+            
         }
     }
 
     &-cta {
         color: $light-gray;
-        font-size: 1.5rem;
+        font-size: 1rem;
         font-weight: 700;
+        text-align: left;
+        margin: 5px 0px;
     }
 
     &-brand {
