--- a/src/index.scss
+++ b/src/index.scss
@@ -1,13 +1,53 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+//BASIC RESET 
+
+html {
+  box-sizing: border-box;
+  font-size: 62.5%;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+*, *:before, *:after {
+  box-sizing: inherit;
+  
 }
+
+
+
+body, h1, h2, h3, h4, h5, h6, p, ol, ul, li {
+  margin: 0;
+  padding: 0;
+  font-weight: normal;
+  font-family: 'Roboto', sans-serif;
+}
+
+ol, ul {
+  list-style: none;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+a {
+  cursor: pointer;
+}
+
+
+// COLORS
+$tundora: #4A4A4A;
+$malibu: rgb(141,135,255);
+$malibu-light: rgba(141,135,255,0.59);
+$silver_halice: #AAA8A8;
+
+//VARIABLES
+$light-gray: $silver_halice;
+$medium-gray: $tundora;
+$purple: $malibu;
+$purple-light: $malibu-light;
+
+//GLOBAL CLASSES
+@import './App.scss';
+
+//SASS FILES OF COMPONENTS
+@import './components/Footer/footer';
+
+@import './components/Nav/nav'
