changes login scss to be imported by index scss

--- a/src/index.scss
+++ b/src/index.scss
@@ -50,4 +50,6 @@ $purple-light: $malibu-light;
 //SASS FILES OF COMPONENTS
 @import './components/Footer/footer';
 
-@import './components/Nav/nav'
+@import './components/Nav/nav';
+
+@import './components/Login/login';
