--- a/src/components/Footer/_footer.scss
+++ b/src/components/Footer/_footer.scss
@@ -67,6 +67,7 @@
         color: white;
         font-size: 1rem;
         font-weight: 700;
+        text-align: left;
     }
 
     &-input-wrapper {
