--- a/src/components/Login/_login.scss
+++ b/src/components/Login/_login.scss
@@ -12,7 +12,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-image: url('../../images/login-photo.png');
+    background-image: url('./images/login-photo.png');
     background-size: cover;
     border-image-repeat: no-repeat;
     max-width: 100%;
@@ -40,7 +40,7 @@
   }
 
   .section-2 {
-      height: 400px;
+      height: 250px;
       display: flex;
       flex-direction: column;
       justify-content: center;
