added sample photos to profile and changes route of profile scss

--- a/src/index.scss
+++ b/src/index.scss
@@ -53,3 +53,5 @@ $purple-light: $malibu-light;
 @import './components/Nav/nav';
 
 @import './components/Login/login';
+
+@import './components/Owner/profile'
