--- a/src/components/Owner/_profile.scss
+++ b/src/components/Owner/_profile.scss
@@ -3,6 +3,8 @@
     flex-direction: row;
     justify-content: space-around;
     width: 100%;
+    margin: 5rem 0px;
+    align-items: center;
     //background-color: white;
 }
 
@@ -10,7 +12,10 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    width: 45%;
+    width: 50%;
+    & img {
+        width: 25%;
+    }
 }
 .user-info {
     img {
