--- a/src/components/CreateListing/createListing.scss
+++ b/src/components/CreateListing/createListing.scss
@@ -3,7 +3,7 @@
   font-family: Roboto;
   font-size: 15px;
   letter-spacing: -0.01px;
-  line-height: 18px;
+  line-height: 30px;
   margin: 0 auto;
   .banner {
     img {
@@ -16,17 +16,17 @@
 .form-body {
   margin: 0 auto;
   width: 962px;
-  padding: 3% 0%;
+  padding: 2% 0%;
 
   form {
     display: flex;
 
     input {
-      margin-bottom: 3%;
+      margin-bottom: 5%;
       border: none;
     }
     select {
-      margin-bottom: 3%;
+      margin-bottom: 5%;
       border: none;
     }
   }
@@ -41,6 +41,7 @@
     flex-direction: column;
     justify-content: space-between;
     height: 450px;
+    margin-bottom: 5%;
   }
   .image-holder {
     border-radius: 3px;
@@ -55,6 +56,9 @@
     line-height: 226px;
     text-align: center;
     color: #d4d2d2;
+    p {
+      background-color: #f0f0f0;
+    }
   }
   .image-preview {
     width: 360px;
@@ -62,10 +66,11 @@
     background-color: #f0f0f0;
   }
   .description {
-    height: 148px;
+    height: 215px;
     width: 383px;
     background-color: #f5f4f4;
     padding-top: -0px;
+    border: none;
   }
 }
 
@@ -80,6 +85,14 @@
   flex-direction: column;
   .middle-row {
     display: flex;
+    justify-content: space-between;
+    align-items: center;
+    .city-input-field {
+      width: 220px;
+    }
+    .middle-row-field {
+      width: 130px;
+    }
   }
   .long-input {
     height: 70px;
@@ -106,6 +119,7 @@
   font-size: 15px;
   letter-spacing: -0.01px;
   line-height: 18px;
+
   .payment {
     display: flex;
     justify-content: space-between;
@@ -113,7 +127,10 @@
     .payment-options {
       display: flex;
       .option {
-        width: 70px;
+        input {
+          margin: 5px;
+        }
+        width: 80px;
         margin-right: 3%;
       }
     }
