--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,5 @@
 .App {
   text-align: center;
-  max-width: 900px;
   margin: 0 auto;
 }
 
@@ -18,21 +17,18 @@
   margin-right: 34px;
 }
 
-
-
 //BUTTONS
 
 .button__dark {
   border-radius: 4px;
   font-weight: 700;
-  color: rgba(255,255,255,0.82);
+  color: rgba(255, 255, 255, 0.82);
   background-color: #262525;
   border: none;
   cursor: pointer;
 
   &:hover {
     color: #262525;
-    background: rgba(255,255,255,0.82);
+    background: rgba(255, 255, 255, 0.82);
   }
 }
-
