--- a/src/index.scss
+++ b/src/index.scss
@@ -9,12 +9,19 @@ html {
 *:before,
 *:after {
   box-sizing: inherit;
-  
 }
 
-
-
-body, h1, h2, h3, h4, h5, h6, p, ol, ul, li {
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ol,
+ul,
+li {
   margin: 0;
   padding: 0;
   font-weight: normal;
@@ -34,12 +41,11 @@ a {
   cursor: pointer;
 }
 
-
 // COLORS
-$tundora: #4A4A4A;
-$malibu: rgb(141,135,255);
-$malibu-light: rgba(141,135,255,0.59);
-$silver_halice: #AAA8A8;
+$tundora: #4a4a4a;
+$malibu: rgb(141, 135, 255);
+$malibu-light: rgba(141, 135, 255, 0.59);
+$silver_halice: #aaa8a8;
 
 //VARIABLES
 $light-gray: $silver_halice;
@@ -58,11 +64,11 @@ input[type="number"]::-webkit-outer-spin-button {
   margin: 0;
 }
 
-@import './components/Footer/footer';
+@import "./components/Footer/footer";
 
-@import './components/Nav/nav';
+@import "./components/Nav/nav";
 
-@import './components/Login/login';
+@import "./components/Login/login";
 
-@import './components/Owner/profile';
-@import './components/Register/register';
+@import "./components/Owner/profile";
+@import "./components/Register/register";
