fixed stylings and merged master

--- a/src/components/Footer/_footer.scss
+++ b/src/components/Footer/_footer.scss
@@ -50,7 +50,7 @@
     }
 
     &-link {
-        color: inherit;
+        color: #8d87ff;
         font-size: .7rem;
         text-decoration: none;
         display: block;
