added stylings to profile page

--- a/src/components/Footer/_footer.scss
+++ b/src/components/Footer/_footer.scss
@@ -51,7 +51,7 @@
 
     &-link {
         color: #8d87ff;
-        font-size: .7rem;
+        font-size: 1rem;
         text-decoration: none;
         display: block;
         text-align: left;
