--- a/src/components/Owner/_profile.scss
+++ b/src/components/Owner/_profile.scss
@@ -3,8 +3,12 @@
     flex-direction: row;
     justify-content: space-around;
     width: 100%;
-    margin: 5rem 0px;
+    max-width: 900px;
+    margin: 5rem auto;
     align-items: center;
+    & p {
+        line-height: 1.3;
+    }
     //background-color: white;
 }
 
