fixed some css issues.

--- a/src/components/CreateListing/_createListing.scss
+++ b/src/components/CreateListing/_createListing.scss
@@ -40,22 +40,26 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 450px;
     margin-bottom: 5%;
+    height: 485px;
   }
   .image-holder {
     border-radius: 3px;
-    height: 400px;
-    width: 380px;
+    height: 386px;
+    width: 360px;
     border-radius: 4px;
     background-color: #f0f0f0;
     font-family: Futura;
     font-size: 30px;
     font-weight: 500;
     letter-spacing: -0.02px;
-    line-height: 226px;
+    line-height: 40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     text-align: center;
     color: #d4d2d2;
+
     p {
       background-color: #f0f0f0;
     }
@@ -69,8 +73,8 @@
     height: 215px;
     width: 383px;
     background-color: #f5f4f4;
-    padding-top: -0px;
     border: none;
+    margin-left: -9%;
   }
 }
 
@@ -172,7 +176,7 @@
   border-radius: 3px;
   text-decoration: none;
   padding: 18px 15px;
-  margin-left: -2%;
+  margin-left: -16%;
   &:hover {
     font-size: 40px;
     background-color: #fff;
@@ -187,11 +191,12 @@
 
 .uploadcare--widget__file-name {
   color: #fff;
+  margin-left: -30%;
   font-size: 40px;
   background-color: #000000;
   border-radius: 3px;
   text-decoration: none;
-  padding: 0 30px;
+  padding: 9px 15px;
   &:hover {
     background-color: #fff;
     color: #000000;
