made it so list item button conditionally renders if required fields are filled out

--- a/src/components/CreateListing/_createListing.scss
+++ b/src/components/CreateListing/_createListing.scss
@@ -160,10 +160,19 @@
       width: 113px;
       background-color: #000000;
       color: #fff;
+
       &:hover {
         background-color: #fff;
         color: #000000;
         border: 1px solid #000000;
+      }
+    }
+
+    .disabled {
+      opacity: 0.1;
+      &:hover {
+        background-color: #000000;
+        color: #fff;
       }
     }
   }
