--- a/src/components/Footer/_footer.scss
+++ b/src/components/Footer/_footer.scss
@@ -2,16 +2,15 @@
     background: $medium-gray;
     
     &-content {
-        max-width: 1024px;
-        width: 95%;
+        width: 80%;
         margin: 0 auto;
         color: white;
         display: flex;
         justify-content: space-between;
         padding-left: 10px;
         padding-right: 25px;
-        padding-top: 8px;
-        padding-bottom: 8px;
+        padding-top: 15px;
+        padding-bottom: 15px;
 
         &__left {
 
@@ -21,18 +20,11 @@
             font-size: 1.5rem;
             letter-spacing: -0.15px;
             line-height: 15px;
-            display: flex;
             justify-content: space-between;
             
 
         }
 
-        & button {
-            background-color: lighten(#000, 15%);
-            border-radius: 5px;
-            padding: 10px 20px;
-            font-weight: 700;
-        }
 
         &__right {
             width: 30%;
@@ -44,18 +36,39 @@
 
         &__three {
             display: flex;
-            justify-content: space-around;
+            justify-content: space-between;
             align-items: center;
         }
     }
 
+    &-button__dark {
+        border-radius: 4px;
+        font-weight: 700;
+        color: rgba(255, 255, 255, 0.82);
+        background-color: #262525;
+        border: none;
+        cursor: pointer;
+        padding: 12px 20px;
+      
+        &:hover {
+          color: #262525;
+          background: rgba(255, 255, 255, 0.82);
+        }
+    }
+
     &-link {
-        color: #8d87ff;
-        font-size: 1rem;
+        color: $malibu-light;
+        font-size: 1.5rem;
         text-decoration: none;
         display: block;
         text-align: left;
-        margin: 5px 0px;
+        margin: 5px 0px 8px 0px;
+
+        &__no-hover {
+            &:hover {
+                color: inherit;
+            }
+        }
 
         &:hover {
             color: $malibu;
@@ -65,7 +78,8 @@
 
     &-heading {
         color: white;
-        font-size: 1rem;
+        margin-bottom: 7px;
+        font-size: 1.6rem;
         font-weight: 700;
         text-align: left;
     }
@@ -77,7 +91,7 @@
 
     &-icon {
         position: absolute;
-        top: 6px;
+        top: 9px;
         left: 5px; 
         color: rgba(113,113,113,0.82);
         font-size: 1.5rem;
@@ -99,10 +113,16 @@
 
     &-cta {
         color: $light-gray;
-        font-size: 1rem;
+        font-size: 1.5rem;
         font-weight: 700;
         text-align: left;
-        margin: 5px 0px;
+        margin: 5px 0px 7px 0px;
+    }
+
+    &-brands-wrapper {
+        display: flex;
+        justify-content: space-between;
+        width: 50%;
     }
 
     &-brand {
@@ -116,3 +136,64 @@
     }
 
 }
+
+
+@media (max-width: 1332px) {
+    .footer-content__left {
+        width: 40%;
+    }
+}
+
+@media (max-width: 1000px) {
+   .footer-content__left {
+       width: 45%
+   }
+
+   .footer-content__right {
+    width: 44%
+    }
+
+   .left-column {
+       width: 60%;
+   }
+
+   .right-column {
+       padding-left: 10px;
+   }
+}
+
+@media (max-width: 905px) {
+    .footer-content {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .footer-content__left {
+        width: 70%
+    }
+
+    .footer-cta {
+        text-align: right;
+        margin-top: 25px;
+    }
+
+    .footer-link__no-hover {
+        text-align: right;
+    }
+
+ }
+
+ @media (max-width: 750px) {
+    .footer-content__three {
+        flex-direction: column;
+    }
+
+    .footer-button__dark {
+        margin-right: 0px;
+        margin-bottom: 15px;
+    }
+
+    .footer-brands-wrapper {
+        width: 70%;
+    }
+ }
