--- a/src/components/Login/_login.scss
+++ b/src/components/Login/_login.scss
@@ -13,7 +13,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background-image: url('./images/login-photo.png');
+  background-image: url('./Images/login-photo.png');
   background-size: cover;
   border-image-repeat: no-repeat;
   width: 900px;
