--- a/src/index.scss
+++ b/src/index.scss
@@ -69,7 +69,7 @@ input[type="number"]::-webkit-outer-spin-button {
 @import "./components/Footer/footer";
 @import './components/NavBar/navbar';
 
-@import "./components/Nav/nav";
+@import "./components/NavBar/navbar";
 
 @import "./components/Login/login";
 
