--- a/src/components/Owner/_profile.scss
+++ b/src/components/Owner/_profile.scss
@@ -50,3 +50,22 @@
     }
     
 }
+
+
+.rating {
+    unicode-bidi: bidi-override;
+    direction: rtl;
+    cursor: pointer;
+    font-size: 1.8rem;
+  }
+  .rating > span {
+    display: inline-block;
+    position: relative;
+    width: 1.1em;
+  }
+  .rating > span:hover:before,
+  .rating > span:hover ~ span:before {
+     content: "\2605";
+     position: absolute;
+     color: #ccb3ff; 
+  }
