--- a/src/components/Register/_register.scss
+++ b/src/components/Register/_register.scss
@@ -3,14 +3,17 @@
     background: url('https://images.unsplash.com/photo-1504610926078-a1611febcad3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=80') no-repeat center center fixed; 
     background-size: cover;
     padding-top: 63px;
-    padding-bottom: 108px;
+    padding-bottom: 63px;
+    & p {
+        text-align: center;
+    }
 
     &-container {
         max-width: 519px;
         width: 70%;
         border-radius: 8px;
         background-color: #FFFFFF;
-        margin: 0 auto 32px auto;
+        margin: 0 auto;
     }
 
     &-heading {
@@ -18,6 +21,7 @@
         font-size: 3rem;
         line-height: 23px;
         padding-top: 73px;
+     
     }
 
     &-label {
@@ -48,6 +52,7 @@
 
     &-submit {
         margin: 56px auto;
+        width: 100%;
         background-color: #292F36;
         font-size: 2.2rem;
         border: none;
