--- a/src/components/Login/_login.scss
+++ b/src/components/Login/_login.scss
@@ -14,7 +14,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background-image: url('./Images/login-photo.png');
+  background-image: url('./Images/login-photo2.png');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
