--- a/src/components/Footer/_footer.scss
+++ b/src/components/Footer/_footer.scss
@@ -3,6 +3,7 @@
     
     &-content {
         width: 80%;
+        max-width: 900px;
         margin: 0 auto;
         color: white;
         display: flex;
@@ -14,7 +15,7 @@
 
         &__left {
 
-            width: 30%;
+            width: 40%;
             display: flex;
             color: $malibu-light;
             font-size: 1.5rem;
