--- a/src/components/Login/_login.scss
+++ b/src/components/Login/_login.scss
@@ -5,7 +5,7 @@
   color: #fff;
   border-radius: 5px;
   font-weight: 700;
-  padding: 1rem 5rem;
+  padding: 2rem 8rem;
   cursor: pointer;
   
 }
@@ -18,7 +18,7 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 70vh;
+  height: 42rem;
   width: 100%;
   max-width: 900px;
   align-items: center;
