Refactoring styling at some pages, more responsivness

--- a/src/components/Nav/_nav.scss
+++ b/src/components/Nav/_nav.scss
@@ -16,7 +16,6 @@
       display: flex;
       width: 20%;
       flex-direction: row;
-      justify-content: space-between;
       align-items: center;
       & h3 {
         font-weight: 700;
@@ -34,6 +33,19 @@
   &-logo {
       display: inline-block;
       margin-right: 42px;
+  }
+
+  &-logo__text {
+      text-decoration: none;
+      color: #000000;
+      font-weight: 700;
+      font-size: 1.7rem;
+      margin-left: 20px;
+      
+      &:hover {
+          text-decoration: inherit;
+          color: $malibu; 
+      }
   }
 
   &-input-wrapper {
@@ -69,7 +81,7 @@
   }
 
   &-link {
-      font-size: 1.8rem;
+      font-size: 1.7rem;
       color: $dark-gray;
       text-decoration: none;
 
