--- a/src/components/Footer/_footer.scss
+++ b/src/components/Footer/_footer.scss
@@ -49,6 +49,7 @@
         border: none;
         cursor: pointer;
         padding: 12px 20px;
+        outline: none;
       
         &:hover {
           color: #262525;
