Tablet view for /create-listing view

--- a/src/components/Footer/_footer.scss
+++ b/src/components/Footer/_footer.scss
@@ -3,6 +3,7 @@
     
     &-content {
         width: 80%;
+        max-width: 1024px;
         margin: 0 auto;
         color: white;
         display: flex;
