--- a/src/components/CreateListing/_createListing.scss
+++ b/src/components/CreateListing/_createListing.scss
@@ -25,18 +25,26 @@
   .banner {
     img {
       height: 200px;
-      width: 100vw;
+      width: 100%;
     }
   }
 }
 
+.form-wrapper {
+  margin: 0 auto;
+}
+
 .form-body {
   margin: 0 auto;
-  width: 962px;
+  max-width: 1024px;
+  width: 80%;
   padding: 2% 0%;
+  display: flex;
 
   form {
     display: flex;
+    margin: 0 auto;
+    justify-content: space-between;
 
     input {
       margin-bottom: 5%;
@@ -52,7 +60,7 @@
 .left-side {
   display: flex;
   flex-direction: column;
-  width: 500px;
+  width: 40%;
 
   .image-items {
     display: flex;
@@ -64,7 +72,7 @@
   .image-holder {
     border-radius: 3px;
     height: 386px;
-    width: 360px;
+    width: 100%;
     border-radius: 4px;
     background-color: #f0f0f0;
     font-family: Futura;
@@ -89,11 +97,11 @@
   }
   .description-div {
     text-align: left;
-    width: 384px;
+    width: 100%;
 
     .description {
       height: 184px;
-      width: 383px;
+      width: 100%;
       background-color: #f5f4f4;
       border: none;
     }
@@ -101,6 +109,7 @@
 }
 
 .right-side {
+  width: 50%;
   text-align: left;
   input {
     font-size: 30px;
@@ -115,26 +124,30 @@
     justify-content: space-between;
     align-items: center;
     .city-input-field {
-      width: 220px;
+      width: 30%;
     }
     .middle-row-field {
-      width: 130px;
+      width: 30%;
     }
   }
   .long-input {
     height: 70px;
-    width: 541px;
+    width: 100%;
     background-color: #f5f4f4;
+    font-size: 2.5rem;
   }
   .medium-input {
     height: 70px;
-    width: 217px;
+    width: 100%;
     background-color: #f5f4f4;
+    font-size: 2.5rem;
+
   }
   .small-input {
     height: 70px;
-    width: 128px;
+    width: 100%;
     background-color: #f5f4f4;
+    font-size: 2.5rem;
   }
 }
 
@@ -142,7 +155,8 @@
   margin-top: 2%;
   display: flex;
   justify-content: space-between;
-  width: 962px;
+  width: 100%;
+  margin: 0 auto;
   align-items: center;
   font-size: 15px;
   letter-spacing: -0.01px;
@@ -152,7 +166,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 400px;
+    width: 38%;
     .payment-options {
       display: flex;
 
@@ -167,7 +181,7 @@
 
   .lower-buttons {
     display: flex;
-    width: 28%;
+    width: 25%;
     justify-content: space-between;
     .cancel {
       border-radius: 4px;
@@ -211,6 +225,10 @@
   }
 }
 
+.uploadcare--widget {
+  margin: 0 auto;
+}
+
 .uploadcare--widget__button {
   color: rgba(255, 255, 255, 0.82);
   font-size: 2.5rem;
@@ -218,7 +236,6 @@
   border-radius: 4px;
   text-decoration: none;
   padding: 18px 63px;
-  margin-left: 6.5%;
   border: 2px solid #262525;
   outline: none;
   &:hover {
@@ -285,4 +302,72 @@
 
 .option input[type='radio']:checked {
   background: #262525;
+}
+
+@media (max-width: 1080px) {
+  .bottom-row .payment {
+    width: 50%;
+  }
+
+  .bottom-row .lower-buttons {
+    width: 31%;
+  }
+}
+
+@media (max-width: 970px) {
+  .uploadcare--widget__button {
+    font-size: 2rem;
+    padding: 15px 40px;
+  }
+
+  .right-side .long-input {
+    font-size: 2rem;
+  }
+
+  .left-side .image-holder {
+    height: 348px;
+    font-size: 2.5rem;
+  }
+
+  .left-side .image-items {
+    height: 444px;
+    justify-content: flex-start;
+  }
+}
+
+@media (max-width: 860px) {
+  .form-body form {
+    flex-direction: column;
+    margin: 0 auto;
+    align-items: center;
+  }
+
+  .left-side {
+    width: 80%;
+  }
+
+  .left-side .image-items {
+    margin-bottom: 0;
+  }
+
+  .bottom-row .lower-buttons {
+    width: 37%;
+  }
+
+  .right-side {
+    width: 80%;
+  }
+
+  .bottom-row .payment {
+    width: 55%;
+  }
+}
+
+@media (max-width: 760px) {
+
+
+  .bottom-row .lower-buttons {
+    width: 42%;
+  }
+
 }
