--- a/src/components/Owner/_profile.scss
+++ b/src/components/Owner/_profile.scss
@@ -37,21 +37,10 @@
     }
 }
 
-
-.checked {
-    color: #ccb3ff;
-    &:hover {
-        color: black !important;
-    }
-  }
-
-.fa {
-    font-size: 16px !important;
+.addProduct {
+    font-weight: 700;
     cursor: pointer;
-    &:hover {
-        color: #ccb3ff; 
-    }
-    
+    padding: .5rem;
 }
 
 
