--- a/src/components/Nav/_nav.scss
+++ b/src/components/Nav/_nav.scss
@@ -1,4 +1,6 @@
 .navbar {
+    z-index: 1;
+    background-color: #fff;
   &-content {
       width: 100%;
       max-width: 900px;
@@ -9,6 +11,7 @@
       padding-top: 10px;
       padding-bottom: 10px;
       flex-direction: row;
+      background-color: #fff;
   }
 
 
@@ -61,11 +64,14 @@
       border: none;
       padding-top: 8px;
       padding-bottom: 8px;
-      padding-left: 30px;
+      padding-left: 5rem;
 
       &::placeholder {
           color: #C2C0C0;
+         
+          text-align: left;
       }
+      
   }
 
   &-link {
@@ -128,7 +134,19 @@
   .navlinks-mobile {
       background: $medium-gray;
       color: $purple-light;
+     
 
+  }
+
+
+  .closed {
+    transform: translateY(-200%);
+    transition: all .5s;
+  }
+
+  .open {
+    transform: translateY(0px); 
+    transition: all .5s;
   }
 
   .navlinks-mobile .navlink-mobile {
@@ -138,5 +156,29 @@
       padding: 8px 0px;
       color: $light-gray;
       font-size: 1.5rem;
+     
   }
+}
+
+.bar1, .bar2, .bar3 {
+    width: 35px;
+    height: 3px;
+    background-color: #000;
+    opacity: .7;
+    margin: 6px 0;
+    transition: 0.4s;
+}
+
+.change .bar1 {
+    -webkit-transform: rotate(-45deg) translate(-9px, 6px);
+    transform: rotate(-45deg) translate(-6px, 3px);
+}
+
+.change .bar2 {
+  opacity: 0;
+}
+
+.change .bar3 {
+    -webkit-transform: rotate(45deg) translate(-8px, -8px);
+    transform: rotate(45deg) translate(-8px, -8px);
 }
