--- a/src/components/Login/_login.scss
+++ b/src/components/Login/_login.scss
@@ -65,4 +65,100 @@
       color: gray;
   }
 
- 
+
+  .login {
+    z-index: 1;
+    background-color: #fff;
+  &-content {
+      width: 100%;
+      max-width: 1024px;
+      justify-content: space-around;
+      margin: 0 auto;
+      display: flex;
+      align-items: center;
+      padding-top: 10px;
+      padding-bottom: 10px;
+      flex-direction: row;
+      background-color: #fff;
+  }
+
+
+  &-left {
+      display: flex;
+      width: 20%;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+      & h3 {
+        font-weight: 700;
+      }
+  }
+
+
+  &-right {
+      display: flex;
+      width: 60%;
+      margin-left: 50px;
+      justify-content: space-between;
+  }
+
+  &-logo {
+      display: inline-block;
+      margin-right: 42px;
+  }
+
+  &-input-wrapper {
+      position: relative;
+      display: inline-block;
+      width: 60%;
+      font-size: 1.8rem;
+  }
+
+  &-icon {
+      position: absolute;
+      top: 50px;
+      left: 15px; 
+      color: black;
+      font-size: 1.5rem;
+      z-index: 500;
+  }
+
+  &-input {
+      color: #C2C0C0;
+      display: inline-block;
+      width: 100%;
+      border-radius: 3px;
+      box-shadow: 0 4px 13px 0 rgba(181,181,181,0.43);
+      border: none;
+      padding-top: 8px;
+      padding-bottom: 8px;
+      padding-left: 5rem;
+
+      &::placeholder {
+          color: #C2C0C0;
+         
+          text-align: left;
+      }
+      
+  }
+
+  &-link {
+      font-size: 1.8rem;
+      color: $dark-gray;
+      text-decoration: none;
+
+      &:hover {
+          text-decoration: none;
+          color: $purple;
+      }
+
+      &__active {
+          color: $purple;
+      }
+  }
+
+  &-mobile {
+      display: none;
+  }
+}
+
