making some style changes.

--- a/src/components/CreateListing/_createListing.scss
+++ b/src/components/CreateListing/_createListing.scss
@@ -35,9 +35,9 @@
 }
 
 .form-body {
-  margin: 0 auto;
+  // margin: 0 auto;
   max-width: 1024px;
-  width: 80%;
+  width: 100%;
   padding: 2% 0%;
   display: flex;
 
@@ -151,7 +151,6 @@
     width: 100%;
     background-color: #f5f4f4;
     font-size: 2.5rem;
-
   }
   .small-input {
     height: 70px;
@@ -211,7 +210,6 @@
       }
     }
 
-
     .list {
       height: 34px;
       width: 113px;
@@ -235,64 +233,16 @@
   }
 }
 
-.uploadcare--widget {
-  margin: 0 auto;
-}
-
-.uploadcare--widget__button {
-  color: rgba(255, 255, 255, 0.82);
-  font-size: 2.5rem;
-  background-color: #000000;
-  border-radius: 4px;
-  text-decoration: none;
-  padding: 18px 63px;
-  border: 2px solid #262525;
-  outline: none;
-  &:hover {
-    font-size: 2.5rem;
-    background-color: rgba(255, 255, 255, 0.82);;
-    color: #262525;
-    border: 2px solid #262525;
-  }
-}
-
-.uploadcare--widget__file-size {
-  display: none;
-}
-
-.uploadcare--widget__file-name {
-  color: rgba(255, 255, 255, 0.82);;
-  font-size: 2.5rem;
-  margin-left: 18%;
-  background-color: #262525;
-  border-radius: 4px;
-  text-decoration: none;
-  padding: 9px 63px;
-  border: 2px solid #262525;
-  outline: none;
-  &:hover {
-    background-color: #fff;
-    color: #000000;
-    border: 2px solid #262525;
-  }
-}
-
-.uploader {
-  margin-left: 10%;
-  margin-bottom: 1%;
-}
-
 .border-dark__hover {
-  border: 2px solid #262525; 
+  border: 2px solid #262525;
 }
 
 .border-dark__hover:hover {
-  border: 2px solid #262525; 
+  border: 2px solid #262525;
   background: rgba(255, 255, 255, 0.82);
 }
 
-
-.option input[type='radio'] {
+.option input[type="radio"] {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
@@ -302,15 +252,14 @@
   background: white;
   outline: none;
   border: 3px solid white;
-  box-shadow:0 0 0 2px #262525;
+  box-shadow: 0 0 0 2px #262525;
   border-radius: 2px;
   width: 20px;
   height: 20px;
   margin-right: 6px;
 }
 
-
-.option input[type='radio']:checked {
+.option input[type="radio"]:checked {
   background: #262525;
 }
 
@@ -374,11 +323,9 @@
 }
 
 @media (max-width: 760px) {
-
   .bottom-row {
     flex-direction: column;
   }
-
 
   .bottom-row .lower-buttons {
     width: 45%;
@@ -393,12 +340,9 @@
   .bottom-row .payment {
     width: 75%;
   }
-
 }
 
 @media (max-width: 546px) {
-
-
   .bottom-row .payment {
     flex-direction: column;
   }
@@ -419,17 +363,26 @@
   .right-side .middle-row .city-input-field {
     width: 100%;
   }
-
 }
 
 @media (max-width: 450px) {
+  .form-wrapper {
+    width: 100%;
+  }
+  .left-side {
+    .condition {
+      width: 100%;
+    }
 
-  .left-side .image-holder {
-    height: 272px;
-    font-size: 2rem;
+    .image-holder {
+      height: 272px;
+      font-size: 2rem;
+    }
   }
 
-  .right-side .long-input {
-    font-size: 1.7rem;
+  .right-side {
+    .long-input {
+      font-size: 1.7rem;
+    }
   }
 }
