--- a/src/components/Nav/_nav.scss
+++ b/src/components/Nav/_nav.scss
@@ -30,7 +30,6 @@
   &-right {
       display: flex;
       width: 60%;
-      margin-left: 50px;
       justify-content: space-between;
   }
 
@@ -42,13 +41,14 @@
   &-input-wrapper {
       position: relative;
       display: inline-block;
-      width: 60%;
+      width: 20%;
       font-size: 1.8rem;
+      
   }
 
   &-icon {
       position: absolute;
-      top: 15px;
+      top: 8px;
       left: 15px; 
       color: black;
       font-size: 1.5rem;
@@ -65,6 +65,7 @@
       padding-top: 8px;
       padding-bottom: 8px;
       padding-left: 5rem;
+      height: 3rem;
 
       &::placeholder {
           color: #C2C0C0;
