--- a/src/components/Owner/_profile.scss
+++ b/src/components/Owner/_profile.scss
@@ -10,6 +10,9 @@
         line-height: 1.3;
     }
     //background-color: white;
+    @media (max-width: 700px) {
+        flex-direction: column;
+     }
 }
 
 .products {
@@ -20,6 +23,9 @@
     & img {
         width: 25%;
     }
+    @media (max-width: 700px) {
+        width: 90%;
+     }
 }
 .user-info {
     img {
@@ -63,6 +69,17 @@
      content: "\2605";
      position: absolute;
      color: #ccb3ff; 
+  }
+
+  .selected {
+
+    
+      &:before {
+     content: "\2605";
+     position: absolute;
+     color: #ccb3ff; 
+    }
+
   }
 
   
