--- a/src/components/Nav/_nav.scss
+++ b/src/components/Nav/_nav.scss
@@ -53,6 +53,10 @@
       color: black;
       font-size: 1.5rem;
       z-index: 500;
+      &__user {
+        font-size: 2rem;
+        cursor: pointer;
+    }
   }
 
   &-input {
@@ -72,6 +76,7 @@
          
           text-align: left;
       }
+    
       
   }
 
@@ -93,6 +98,33 @@
   &-mobile {
       display: none;
   }
+}
+
+.profile-dropdown {
+    display: none;
+    flex-direction: row;
+    background-color: border;
+    color: black;
+    text-decoration: none;
+    padding: 0px 29px;
+    justify-content: flex-end;
+    height: 7rem;
+    width: 100%;
+    max-width: 1024px;
+    margin: 0 auto;
+    .dropdown {
+        display: flex;
+        flex-direction: column;
+        border: 2px solid black;
+        width: fit-content;
+        padding: 1rem;
+        float: right;
+ }
+ 
+}
+
+.dropdown-open {
+    display: flex;
 }
 
 .navlinks-mobile {
